tests/testfiles/passing/invalid_identifiers/keyword_as_id_long.c
/* Keyword as identifier: long */
int main() {
    int long;
    long = 42;
}